--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <section class="features">
         <h2>Principais Recursos:</h2>
         <ul>
-          <li>Registo de Resíduos: Registro da quantidade de resíduos orgânicos gerados.</li>
+          <li>Registro de Resíduos: Registro da quantidade de resíduos orgânicos gerados.</li>
           <li>Agendamento de Entregas: Planejamento e agendamento de entregas dos resíduos.</li>
           <li>Visualização de Dados: Acesso a dados sobre impacto ambiental.</li>
           <li>Monitorização Financeira: Monitoramento do retorno financeiro pela correta destinação dos resíduos.</li>
