--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     />
   </head>
   <body>
-    <header>
-    
-      <div class="logo"><input type = "image" src = "img/Logo-48-48.jpg"> ReutilizaTech</div>
+    <header></header>
       <div class="logo"><a href="index.html"><input type = "image" src = "img/Logo-48-48.jpg"></a> ReutilizaTech</div>
       <nav>
         <ul>
@@ -42,7 +40,7 @@
         <ul>
 
           <li>Registro de Resíduos: Registro da quantidade de resíduos orgânicos gerados.</li>
-=======
+
           <li class="animado">Registo de Resíduos: Registro da quantidade de resíduos orgânicos gerados.</li>
           <li>Agendamento de Entregas: Planejamento e agendamento de entregas dos resíduos.</li>
           <li>Visualização de Dados: Acesso a dados sobre impacto ambiental.</li>
