--- a/contato.html
+++ b/contato.html
@@ -11,23 +11,24 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li>
-            <a href="index.html"><i class="fas fa-home"></i> Home</a>
-          </li>
-          <li>
-            <a href="sobre.html"><i class="fas fa-info-circle"></i> Proposta</a>
-          </li>
-          <li>
-            <a href="contato.html" class="active"
-              ><i class="fas fa-envelope"></i> Contato</a
-            >
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <header></header>
+    <div class="logo"><a href="index.html"><input type = "image" src = "img/Logo-48-48.jpg"></a> ReutilizaTech</div>
+    <nav>
+      <ul>
+        <li>
+          <a href="index.html" class="active"
+            ><i class="fas fa-home"></i> Home</a
+          >
+        </li>
+        <li>
+          <a href="sobre.html"><i class="fas fa-info-circle"></i> Nossa Visão</a>
+        </li>
+        <li>
+          <a href="contato.html"><i class="fas fa-envelope"></i> Contato</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
     <main>
       <section class="contact">
         <h2>Entre em Contato</h2>
