--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <header></header>
+    <header>
       <div class="logo"><a href="index.html"><input type = "image" src = "img/Logo-48-48.jpg"></a> ReutilizaTech</div>
       <nav>
         <ul>
@@ -37,16 +37,13 @@
       </section>
       <section class="features">
         <h2>Principais Recursos:</h2>
+        <h3 class="animado">Registo de Resíduos: Registro da quantidade de resíduos orgânicos gerados.</h3>
         <ul>
-
-          <li>Registro de Resíduos: Registro da quantidade de resíduos orgânicos gerados.</li>
-
-          <li class="animado">Registo de Resíduos: Registro da quantidade de resíduos orgânicos gerados.</li>
           <li>Agendamento de Entregas: Planejamento e agendamento de entregas dos resíduos.</li>
           <li>Visualização de Dados: Acesso a dados sobre impacto ambiental.</li>
           <li>Monitorização Financeira: Monitoramento do retorno financeiro pela correta destinação dos resíduos.</li>
         </ul>
-        <h3 class="animado">Para a administração, o sistema oferecerá:</h3>
+        <h4 class="animado">Para a administração, o sistema oferecerá:</h4>
         <ul>
           <li>Painéis de Relatórios: Relatórios automáticos para otimizar a logística de recolha.</li>
           <li>Indicadores Ambientais: Acompanhamento de indicadores ambientais.</li>
