--- a/sobre.html
+++ b/sobre.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <header></header>
+    <header>
     <div class="logo"><a href="index.html"><input type = "image" src = "img/Logo-48-48.jpg"></a> ReutilizaTech</div>
     <nav>
       <ul>
