--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </section>
       <section class="features">
         <h2>Principais Recursos:</h2>
-        <h3 class="animado">Registo de Resíduos: Registro da quantidade de resíduos orgânicos gerados.</h3>
+        <h3 class="animado">Registro da quantidade de resíduos orgânicos gerados.</h3>
         <ul>
           <li>Agendamento de Entregas: Planejamento e agendamento de entregas dos resíduos.</li>
           <li>Visualização de Dados: Acesso a dados sobre impacto ambiental.</li>
