--- a/sobre.html
+++ b/sobre.html
@@ -32,7 +32,7 @@
   </header>
     <main>
       <section class="about">
-        <h2>Proposta:</h2>
+        <h2>Nossa visão:</h2>
         <p>
           A má gestão dos resíduos orgânicos é um grande desafio ambiental nas zonas urbanas. Aproximadamente um terço dos alimentos produzidos globalmente é desperdiçado, gerando impactos ambientais e econômicos significativos, 
           especialmente em centros comerciais. A separação correta dos resíduos pode gerar economia, 
