--- a/contato.html
+++ b/contato.html
@@ -38,7 +38,7 @@
           <label for="email">E-mail:</label>
           <input type="email" id="email" name="email" required />
           <label for="message">Mensagem:</label>
-          <textarea id="message" name="message" required></textarea>
+          <textarea cols="50" rows="10" id="message" name="message" required></textarea>
           <button type="submit">Enviar</button>
         </form>
       </section>
