--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+      >
+      <style>
+        body{
+         background-image: url('../img/fundo.jpg');
+         background-size: cover; /* ajusta a imagem para cobrir toda a tela */
+         background-position: center; /* centraliza a imagem */
+         background-repeat: no-repeat; /* evita repetição da imagem */
+        }
+      </style>
   </head>
   <body>
     <header>
@@ -50,6 +58,7 @@
         </ul>
       </section>
     </main>
+    
     <footer>
       <p>&copy; 2025 Meu Site. Todos os direitos reservados.</p>
       <p>
