--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       >
       <style>
         body{
-         background-image: url('../img/fundo.jpg');
+         background-image: url('img/fundo.jpg');
          background-size: cover; /* ajusta a imagem para cobrir toda a tela */
          background-position: center; /* centraliza a imagem */
          background-repeat: no-repeat; /* evita repetição da imagem */
