--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       >
       <style>
         body{
-         background-image: url('../img/fundo.jpg');
+         background-image: url('img/fundo.jpg');
          background-size: cover; /* ajusta a imagem para cobrir toda a tela */
          background-position: center; /* centraliza a imagem */
          background-repeat: no-repeat; /* evita repetição da imagem */
@@ -45,13 +45,21 @@
       </section>
       <section class="features">
         <h2>Principais Recursos:</h2>
-        <h3 class="animado">Registro da quantidade de resíduos orgânicos gerados.</h3>
+        <h3 class="animado">Teste nossa calculadora de resíduos!</h3>
+        <ul>
+          <li>Com essa calculadora você pode analisar qual será o custo para descartar seu lixo orgânico.</li>
+         <!--<li>
+            <a href="calculo.html" class="header"><i class="fas fa-calculator"></i> Calculadora</a>
+        </li>-->
+      <button onclick="window.location.href='calculo.html'"><i class="fas fa-calculator"></i>Calculadora</button>
+        </ul>
+        <h4 class="animado">Registro da quantidade de resíduos orgânicos gerados.</h4>
         <ul>
           <li>Agendamento de Entregas: Planejamento e agendamento de entregas dos resíduos.</li>
           <li>Visualização de Dados: Acesso a dados sobre impacto ambiental.</li>
           <li>Monitorização Financeira: Monitoramento do retorno financeiro pela correta destinação dos resíduos.</li>
         </ul>
-        <h4 class="animado">Para a administração, o sistema oferecerá:</h4>
+        <h5 class="animado">Para a administração, o sistema oferecerá:</h5>
         <ul>
           <li>Painéis de Relatórios: Relatórios automáticos para otimizar a logística de recolha.</li>
           <li>Indicadores Ambientais: Acompanhamento de indicadores ambientais.</li>
