--- a/calculo.html
+++ b/calculo.html
@@ -14,10 +14,16 @@
       <div class="logo"><a href="index.html"><input type = "image" src = "img/Logo-48-48.jpg"></a> ReutilizaTech</div>
       <nav>
         <ul>
+          
           <li>
             <a href="index.html" class="active"
               ><i class="fas fa-home"></i> Home</a
+            > 
+            <li>
+            <a href="calculo.html" class="active"
+              ><i class="fas fa-calculator"></i> Calculadora</a
             >
+          </li>
           </li>
           <li>
             <a href="sobre.html"><i class="fas fa-info-circle"></i> Nossa Visão</a>
