--- a/sysWeb.html
+++ b/sysWeb.html
@@ -19,6 +19,11 @@
               ><i class="fas fa-home"></i> Home</a
             >
           </li>
+           <li>
+            <a href="calculo.html" class="active"
+              ><i class="fas fa-calculator"></i> Calculadora</a
+            >
+          </li>
           <li>
             <a href="sobre.html"><i class="fas fa-info-circle"></i> Nossa Visão</a>
           </li>
