--- a/calculo.html
+++ b/calculo.html
@@ -17,12 +17,10 @@
           
           <li>
             <a href="index.html" class="active"
-              ><i class="fas fa-home"></i> Home</a
-            > 
+              ><i class="fas fa-home"></i> Home</a> 
             <li>
             <a href="calculo.html" class="active"
-              ><i class="fas fa-calculator"></i> Calculadora</a
-            >
+              ><i class="fas fa-calculator"></i> Calculadora</a>
           </li>
           </li>
           <li>
